feat: adding placeholder to comment input

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,3 +74,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+.tiptap p.is-editor-empty:first-child::before {
+ @apply text-slate-500;
+  content: attr(data-placeholder);
+  float: left;
+  height: 0;
+  pointer-events: none;
+}
