--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -95,6 +95,37 @@
   }
 }
 
+/* Radix Collapsible */
+.CollapsibleContent {
+  overflow: hidden;
+}
+.CollapsibleContent[data-state='open'] {
+  animation: slideDown 300ms ease-in-out;
+}
+.CollapsibleContent[data-state='closed'] {
+  animation: slideUp 300ms ease-in-out;
+}
+
+@keyframes slideDown {
+  from {
+    height: 0;
+  }
+  to {
+    height: var(--radix-collapsible-content-height);
+  }
+}
+
+@keyframes slideUp {
+  from {
+    height: var(--radix-collapsible-content-height);
+  }
+  to {
+    height: 0;
+  }
+}
+
+/* Tiptap */
+
 .tiptap p.is-editor-empty:first-child::before {
  @apply text-slate-500;
   content: attr(data-placeholder);
