fix: video proportion

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -95,6 +95,10 @@
   }
 }
 
+iframe body {
+  background-color: #000;
+}
+
 /* Radix Collapsible */
 .CollapsibleContent {
   overflow: hidden;
@@ -127,7 +131,7 @@
 /* Tiptap */
 
 .tiptap p.is-editor-empty:first-child::before {
- @apply text-slate-500;
+  @apply text-slate-500;
   content: attr(data-placeholder);
   float: left;
   height: 0;
@@ -136,18 +140,18 @@
 
 /* Prosemirror styles */
 
-ul[data-type="taskList"] li > label {
+ul[data-type='taskList'] li > label {
   margin-right: 0.2rem;
   user-select: none;
 }
 
 @media screen and (max-width: 768px) {
-  ul[data-type="taskList"] li > label {
+  ul[data-type='taskList'] li > label {
     margin-right: 0.5rem;
   }
 }
 
-ul[data-type="taskList"] li > label input[type="checkbox"] {
+ul[data-type='taskList'] li > label input[type='checkbox'] {
   -webkit-appearance: none;
   appearance: none;
   background-color: hsl(var(--background));
@@ -171,7 +175,7 @@ ul[data-type="taskList"] li > label input[type="checkbox"] {
   }
 
   &::before {
-    content: "";
+    content: '';
     width: 0.65em;
     height: 0.65em;
     transform: scale(0);
@@ -186,7 +190,7 @@ ul[data-type="taskList"] li > label input[type="checkbox"] {
   }
 }
 
-ul[data-type="taskList"] li[data-checked="true"] > div > p {
+ul[data-type='taskList'] li[data-checked='true'] > div > p {
   color: var(--muted-foreground);
   text-decoration: line-through;
   text-decoration-thickness: 2px;
